# My-Chat

./: README.md  chatu.py  data_handler.py  extract.py  flights_data.csv  flights_data.json  fligth_scraper.py  json_to_csv.py  main.py  mongodb.py  pyproject.toml  schema.json  schemaschema.py  test  test.py  tools.py
