[tool.poetry]
name = "scraping-kwi"
version = "0.1.0"
description = ""
authors = ["EvaMariaPc <purtuceva2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pandas = "^2.2.2"
langchain-experimental = "^0.0.60"
tabulate = "^0.9.0"
timeout-decorator = "^0.5.0"
numexpr = "^2.10.0"
langchain-openai = "^0.1.8"
langchain-text-splitters = "^0.2.1"
langchain = "0.2.0"
streamlit-chat = "^0.1.1"
faiss-cpu = "^1.8.0"
tiktoken = "^0.7.0"
matplotlip = "^0.2"
matplotlib = "^3.9.0"
altair = "4.0"
